# chatpack-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: integration_tests.rs
tests/fixtures/: discord_export.json  instagram_export.json  telegram_export.json  whatsapp_export.txt
